--- a/front/front.conf
+++ b/front/front.conf
@@ -13,7 +13,7 @@ server {
 
     include mime.types;
     location /api {
-            proxy_pass         http://api:8000/;
+            proxy_pass         http://rest:8000/;
             proxy_redirect     off;
 
             proxy_set_header   Host             $host;
