--- a/front/front.conf
+++ b/front/front.conf
@@ -12,8 +12,8 @@ server {
     add_header Access-Control-Allow-Methods "PUT, GET";
 
     include mime.types;
-    location /api {
-            proxy_pass         http://rest:8000/;
+    location /api/ {
+            proxy_pass         http://rest:8001/;
             proxy_redirect     off;
 
             proxy_set_header   Host             $host;
